resources/style/main_small.css
@media (max-width: 813px) {
    body {
        background: #ccc;
    }

    #content {
        padding: 0;
    }

    #nav_bar {
        height: 40px !important;
        display: block;
        border-bottom: 1px solid #ccc;
    }

    #nav_bar_title {
        float: left;
        line-height: 40px;
        text-transform: uppercase;
        font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
        font-weight: 900;
        font-size: 1.2em;
        opacity: 0.5;
        margin-left: 20px;
        letter-spacing: 1px;
        cursor: pointer;
    }

    #nav_bar_mobile_button {
        width: 40px;
        height: 40px;
        float: right;
        background: url('../media/menu_icon.png') no-repeat center;
        background-size: 30px;
        opacity: 0.5;
        cursor: pointer;
    }

    #nav_bar_inner {
        width: 100%;
        height: 0px;
        overflow: hidden;
        transition: all 0.5s;
    }

    #nav_bar_inner.regular {
        height: 200px;
    }

    .nav_bar_item
    {
        width: 100%;
        padding: 10px 20px;
        box-sizing: border-box;
        font-size: 0.8em !important;
        text-align: left !important;
        background: #fff;
    }

    .nav_bar_item.selected {
        background: #e7e7e7;
    }

    .page {
        transition: all 0.5s;
    }

    #about_page,
    #contact_page_inner_container {
        display: block;
    }

    #resume_page_inner_container {
        padding: 25px 0;
        box-sizing: border-box;
    }

    .resume_section {
        padding: 0;
        margin-bottom: 10px;
        text-transform: uppercase;
        font-size: 1.2em;
        font-weight: bold;
        border-bottom: 1px solid black;
        box-sizing: border-box;
    }

    #resume_page_inner_container p {
        margin-left: 20px;
        margin-bottom: 10px;
        text-align: left !important;
    }

    #contact_page_container {
        height: auto;
    }

    #contact_page_table {
        margin: 0 auto;
    }

    .visible-xs {
        display: block !important;
    }
    
    .img-circle {
        float: none !important;
        display: block;
        margin: 20px auto 10px;
    }

    .img-left,
    .img-right {
        float: none !important;
        display: block;
        margin: 0 auto;
    }

    .display_none_xs {
        display: none;
    }
}

